tests/golden/openshift/openshift/openshift/01_vcluster_helmchart/vcluster/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: vcluster
    chart: vcluster-0.36.1
    heritage: Helm
    release: openshift
  name: openshift
  namespace: syn-openshift
spec:
  rules:
    - host: null
      http:
        paths:
          - backend:
              service:
                name: openshift
                port:
                  name: https
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - null
      secretName: openshift-tls
