tests/golden/openshift/openshift/openshift/01_vcluster_helmchart/vcluster/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: vcluster
    chart: vcluster-0.29.1
    heritage: Helm
    release: openshift
  name: openshift
  namespace: syn-openshift
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
  podManagementPolicy: Parallel
  replicas: 1
  selector:
    matchLabels:
      app: vcluster
      release: openshift
  serviceName: openshift-headless
  template:
    metadata:
      annotations:
        vClusterConfigHash: 6c5bb32de6cfa69310cf403ef56ba466d8a10b99eb5bc5b17a320e92fe88c9e3
      labels:
        app: vcluster
        release: openshift
    spec:
      containers:
        - env:
            - name: VCLUSTER_NAME
              value: openshift
            - name: LOFT_LOG_ENCODING
              value: console
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: NODE_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.hostIP
          image: ghcr.io/loft-sh/vcluster-oss:0.37.3
          imagePullPolicy: null
          livenessProbe:
            failureThreshold: 60
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 60
            periodSeconds: 2
            timeoutSeconds: 3
          name: syncer
          readinessProbe:
            failureThreshold: 60
            httpGet:
              path: /readyz
              port: 8443
              scheme: HTTPS
            periodSeconds: 2
            timeoutSeconds: 3
          resources:
            limits:
              ephemeral-storage: 8Gi
              memory: 2Gi
            requests:
              cpu: 200m
              ephemeral-storage: 1Gi
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
          startupProbe:
            failureThreshold: 300
            httpGet:
              path: /readyz
              port: 8443
              scheme: HTTPS
            periodSeconds: 6
            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /binaries
              name: binaries
            - mountPath: /pki
              name: certs
            - mountPath: /.cache/helm
              name: helm-cache
            - mountPath: /var/lib/vcluster
              name: vcluster-config
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: true
      initContainers:
        - args:
            - -r
            - /kubernetes/.
            - /binaries/
          command:
            - cp
          image: ghcr.io/loft-sh/kubernetes:v1.32.13
          name: kubernetes
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 40m
              memory: 64Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /binaries
              name: binaries
      serviceAccountName: vc-openshift
      terminationGracePeriodSeconds: 10
      volumes:
        - emptyDir: {}
          name: helm-cache
        - emptyDir: {}
          name: binaries
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: certs
        - name: vcluster-config
          secret:
            secretName: vc-config-openshift
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
